# DeskClock

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  ClockWidget.cpp  ClockWidget.hpp  ClockWindow.cpp  ClockWindow.hpp  MainWidget.cpp  MainWidget.hpp  MenuWidget.cpp  MenuWidget.hpp  QWeather.cpp  QWeather.hpp  QWeatherModel.cpp  QWeatherModel.hpp  main.cpp
